--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,7 @@
         commentstyle=\color{dkgreen},
         morekeywords={,input, output, return, datatype, function, in, if, then, else, foreach, while, begin, end, inputs, outputs, procedure, for, do, done, fi, break, not, local, continue, and,} %add the keywords you want, or load a language as Rubens explains in his comment above.
         numbers=left,
+        escapeinside={(*@}{@*)},
         xleftmargin=.05\textwidth
       }
 
