--- a/introduccion.tex
+++ b/introduccion.tex
@@ -33,7 +33,7 @@ definición de \emph{drivers}, programas que permiten construir entradas para el
 código bajo análisis. De manera similar, en los enfoques de tests unitarios
 parametrizados \cite{Tillmann:2010} es obligatorio un mecanismo para construir
 entradas. Algunas herramientas basadas en la ejecución simbólica requieren las
-llamadas "fábricas de objetos" para construir casos de prueba que incluyan
+llamadas ``fábricas de objetos'' para construir casos de prueba que incluyan
 entradas con tipos no primitivos \cite{Tillmann:2008}. Las técnicas
 automatizadas de generación de tests basadas en la API de un módulo pueden
 usarse para construir entradas de tipos no primitivos \cite{Pacheco07,
